test/cbmc/negative_tests/float_overflow_check/float_overflow_check_harness.c
../../aws-templates-for-cbmc-proofs/template-for-repository/negative_tests/float_overflow_check/float_overflow_check_harness.c